--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "browser-sync": "^2.24.6",
     "del": "^3.0.0",
     "fancybox": "^3.0.1",
-    "gulp": "^3.9.1",
+    "gulp": "3.9.1",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-cache": "^1.0.2",
     "gulp-clean-css": "^3.10.0",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.3",
     "gulp-csso": "^3.0.1",
-    "gulp-imagemin": "^4.1.0",
+    "gulp-imagemin": "^5.0.3",
     "gulp-plumber": "^1.2.0",
     "gulp-pug": "^4.0.1",
     "gulp-rename": "^1.4.0",
@@ -33,9 +33,11 @@
   "dependencies": {
     "@fancyapps/fancybox": "^3.3.5",
     "animate.css": "^3.7.0",
+    "jquery-validation": "^1.19.0",
     "masonry-layout": "^4.2.2",
     "owl.carousel": "^2.3.4",
     "responsive-tabs": "^1.6.3",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "wow.js": "^1.2.2"
   }
 }
